--- a/package.json
+++ b/package.json
@@ -21,16 +21,18 @@
     "serverless-http": "^2.3.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.10.1",
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "serverless-scriptable-plugin": "^1.0.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-merge": "^4.2.2",
-    "serverless-scriptable-plugin": "^1.0.5"
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
   }
 }
