--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@reach/router": "^1.2.1",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "sass-loader": "^8.0.2",
     "serverless-scriptable-plugin": "^1.0.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
